NEWS -- an overview of user-visible changes with each release
 
----------------------------------------------------------------------
utsushi-0.55.0                                            (2019-04-02)
----------------------------------------------------------------------
 * adds driver support for new models

----------------------------------------------------------------------
utsushi-0.54.0                                            (2019-03-06)
----------------------------------------------------------------------
 * adds driver support for new models
  
----------------------------------------------------------------------
utsushi-0.53.1                                            (2019-02-27)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.52.0                                            (2019-02-19)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.51.0                                            (2019-02-12)
----------------------------------------------------------------------
 * update supported mail addresses
 
----------------------------------------------------------------------
utsushi-0.50.0                                            (2018-12-20)
----------------------------------------------------------------------
 * adds driver support for new models
 
----------------------------------------------------------------------
utsushi-0.49.1                                            (2018-11-29)
----------------------------------------------------------------------
 * adjusted for boost1.67
 
----------------------------------------------------------------------
utsushi-0.49.0                                            (2018-11-28)