@@ -228,6 +228,7 @@ driverdata_DATA += data/DS-520.dat
 driverdata_DATA += data/DS-560.dat
 driverdata_DATA += data/DS-530.dat
 driverdata_DATA += data/DS-535.dat
+driverdata_DATA += data/DS-535H.dat
 driverdata_DATA += data/DS-570W.dat
 driverdata_DATA += data/DS-575W.dat
 driverdata_DATA += data/DS-760.dat
@@ -322,6 +323,9 @@ $(srcdir)/data/WF-6590.dat: $(srcdir)/data/PX-M860F.dat
 	sed -e 's,PID 08CE,PID 08CF,' $< > $@
 
 $(srcdir)/data/DS-535.dat: $(srcdir)/data/DS-530.dat
+	$(clone_dat)
+
+$(srcdir)/data/DS-535H.dat: $(srcdir)/data/DS-530.dat
 	$(clone_dat)
 
 $(srcdir)/data/DS-775.dat: $(srcdir)/data/DS-530.dat
