@@ -56,6 +56,7 @@ ATTRS{idProduct}=="016e", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="016f", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0176", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="0177", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="017a", ENV{utsushi_driver}="esci"
 
 ATTRS{idProduct}=="08bc", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="08c0", ENV{utsushi_driver}="esci"
@@ -157,10 +158,15 @@ ATTRS{idProduct}=="115c", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="115d", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1160", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1161", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="1162", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="1163", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1164", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1165", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1166", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="1169", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="116a", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="116b", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="116e", ENV{utsushi_driver}="esci"
 
 ATTRS{idProduct}=="013c", ENV{utsushi_driver}="esci:gt-s650", ENV{firmware_file}="esfw010c.bin"
 ATTRS{idProduct}=="013d", ENV{utsushi_driver}="esci:gt-s650", ENV{firmware_file}="esfw010c.bin"
