@@ -1,6 +1,16 @@
 NEWS -- an overview of user-visible changes with each release
  
 ----------------------------------------------------------------------
+utsushi-0.57.0                                            (2019-07-05)
+----------------------------------------------------------------------
+ * adds driver support for new models
+  
+----------------------------------------------------------------------
+utsushi-0.56.0                                            (2019-06-20)
+----------------------------------------------------------------------
+ * adds driver support for new models
+ 
+----------------------------------------------------------------------
 utsushi-0.55.0                                            (2019-04-02)
 ----------------------------------------------------------------------
  * adds driver support for new models
